# R-Type

./: CMakeLists.txt  conanfile.txt  main.cpp
Assets/: r-typesheet32.xcf
Doc/: rfc.txt
source/ECS/Components/: Animation.hpp  CollisionComponent.hpp  ComponentArray.hpp  Enemy.hpp  IComponentArray.hpp  Input.hpp  PhysicsComponent.hpp  PlayerComponent.hpp  Shapes.hpp  Shoot.hpp  ShootComponent.hpp  Sprite.hpp  Transform.hpp
source/ECS/Managers/: ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp  SystemManager.cpp  SystemManager.hpp
source/ECS/Network/: Network.cpp  Network.hpp
source/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  ClientEnemyNetworkSystem.cpp  ClientEnemyNetworkSystem.hpp  ClientPlayerNetworkSystem.cpp  ClientPlayerNetworkSystem.hpp  ClientShootNetworkSystem.cpp  ClientShootNetworkSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Coordinator.cpp  Coordinator.hpp  EnemyNetworkSystem.cpp  EnemyNetworkSystem.hpp  InputSystem.cpp  InputSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  ShapeRenderSystem.cpp  ShapeRenderSystem.hpp  ShootSystem.cpp  ShootSystem.hpp  SpriteRenderSystem.cpp  SpriteRenderSystem.hpp  System.hpp
source/Prefabs/: PF_BasicEnemyShape.hpp  PF_Enemies_Basic.hpp  PF_FirstBoss.hpp  PF_Missile_Shape.hpp  PF_Player.hpp
source/Server/: Core.cpp  Core.hpp  Interface.cpp  Interface.hpp  Player.cpp  Player.hpp  Room.cpp  Room.hpp  SafeQueue.cpp  SafeQueue.hpp  Server.cpp  Server.hpp  main.cpp
